# DesktopGrouping

./: .editorconfig  .gitignore  App.xaml  App.xaml.cs  Cargo.toml  Desktop Grouping.csproj  Desktop Grouping.sln  MainWindow.xaml  MainWindow.xaml.cs  NewGroupMenu.cs  README.md  UnForcusWindow.cs  build.rs  installer.nsi
Groupx/: Group.cs  GroupItem.cs  GroupVM.cs  GroupWindow.xaml  GroupWindow.xaml.cs
Groupx/ExtractIcon/: ExtractByExtractAssociatedIcon.cs  ExtractByLowLevelFunctions.cs
Groupx/Option/: GroupOption.xaml  GroupOption.xaml.cs
Properties/: Resources.Designer.cs  Settings.Designer.cs
src/: _temp.rs  child_window.rs  file_drag.rs  lib.rs  logger.rs  main.rs  mywindow.rs  settings.rs  settings_window.rs  window_utils.rs
src/graphics/: canvas.rs  colors.rs  drawing.rs  engine.rs  graphics.rs  layout.rs  mod.rs
src/graphics/api/: d2d1.rs  d3d11.rs  dcomp.rs  dwrite.rs  dxgi.rs  mod.rs  wic.rs
src/graphics/drawing/: background.rs  help.rs  icon.rs  label.rs  mod.rs  painter.rs  resources.rs
src/settings/: manager.rs  mod.rs  models.rs  storage.rs
src/tray/: mod.rs  tray_icon.rs
src/ui/: mod.rs  settings_window.rs
src/ui/group/: interaction.rs  mod.rs  model.rs  renderer.rs  window.rs
src/ui/help/: mod.rs  renderer.rs  window.rs
src/win32/: mod.rs  ui_shell.rs  ui_wam.rs  vproc.rs  window.rs
src/win32/api/: create_window.rs  message_loop.rs  mod.rs  register_class.rs  shell.rs  show_window.rs  utils.rs
v1/: CloseMenu.cs  Desktop Grouping.sln  MainVM.cs  PersistanceHelper.cs  UnForcusWindow.cs
v1/Groupx/: Group.cs  GroupVM.cs  GroupWindow.xaml  GroupWindow.xaml.cs
v1/Groupx/ExtractIcon/: ExtractByLowLevelFunctions.cs  IExtractIcon.cs
v1/Groupx/Option/: GroupOption.xaml  GroupOption.xaml.cs  GroupOptionValue.cs
v2/: Cargo.toml  Makefile.toml  README.md  build.rs  installer.nsi
v2/src/: app.rc  file_drag.rs  logger.rs  main.rs  mywindow.rs  settings.rs
v2/src/tray/: mod.rs  tray_icon.rs
v2/src/win32/: mod.rs  ui_shell.rs  ui_wam.rs
