[package]
name = "desktop_grouping"
version = "3.0.0"
edition = "2024"
license = "MIT"
homepage = "https://blog.weizlogy.com/software/2024/10/25/desktopgrouping.html"
repository = "https://github.com/weizlogy/Desktop-Grouping"
readme = "README.md"
description = "DesktopGrouping is a utility for Windows that helps to organize icons on the desktop like Fences and very simple style."
authors = ["weizlogy"]

[dependencies]
# 繧ｭ繝｣繝ｭ繧ｰ
log = "0.4"
env_logger = "0.10"

# 設定ファイル関連
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# ユーティリティ
scopeguard = "1.2"
chrono = "0.4"
arboard = "3"
rand = "0.8"
colorsys = "0.6"

# システムトレイアイコン (Win32 ネイティブで自前実装するか検討中だが一旦維持)
tray-icon = "0.20"

# Windows API (DirectX / Win32 Native)
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_Storage_FileSystem",
  "Win32_UI_Controls",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Imaging",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Foundation",
  "Foundation_Numerics",
] }

[build-dependencies]
embed-resource = "2.3"

[dev-dependencies]
tempfile = "3"
